# glm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  rebar.config
.github/: copilot-instructions.md
.github/copilot/: binding-surface.md
.github/instructions/: beam-glm.instructions.md  glm-erlang.instructions.md
.github/workflows/: build.yml  gh-pages.yml  release.yml  static.yml  verify.yml  workflow.yml
c_src/: beam_glm.cpp  beam_glm.hpp
docs/: api-mapping.md
include/: glm.hrl
src/: glm.app.src  glm.erl  glm_angle.erl  glm_common.erl  glm_easing.erl  glm_exponential.erl  glm_integer.erl  glm_matrix.erl  glm_packing.erl  glm_quat.erl  glm_raw.erl  glm_relational.erl  glm_transform.erl  glm_vector.erl
test/: glm_angle_test.erl  glm_bool_test.erl  glm_common_test.erl  glm_easing_test.erl  glm_exponential_test.erl  glm_float_test.erl  glm_integer_test.erl  glm_matrix_ops_test.erl  glm_matrix_test.erl  glm_packing_test.erl  glm_quat_test.erl  glm_quaternion_test.erl  glm_relational_test.erl  glm_scalar_test.erl  glm_test.erl  glm_transform_test.erl  glm_types_test.erl  glm_vector_ops_test.erl  glm_vector_test.erl  test_glm.erl  test_glm.hrl
